# anglersim

./: .envrc  .gitignore  .pre-commit-config  .pre-commit-config.yaml  CLAUDE.md  README.md  convert_this_to_streamlit_app.ipynb  go.mod  go.sum  notes.md
.claude/commands/: new-iteration.md
app/cmd/fish/generate/: main.go
app/cmd/fish/placeholder/: main.go
app/fish/: build.sh  test.html  widget.html
app/pkg/fish/: embed.go  fish.go  grid.go  iteration.go  projection_grid.json  simulation.go  simulation_test.go
cfg/: smc_inference.yaml
cmd/batchhierarchical/: main.go
cmd/batchsmc/: main.go
cmd/fetchcovariates/: main.go
cmd/fit/: main.go
cmd/simulate/: main.go
cmd/smc/: main.go
cmd/validate/: main.go
docs/: notes.md
nbs/: data_exploration.ipynb  model_validation.ipynb  nfpd_exploration.ipynb
pkg/data/: counts.go  coverage.go  hydrology.go  panel.go  sites.go  types.go  water_quality.go
pkg/inference/: hierarchical.go  hierarchical_test.go  priors.go  priors_test.go  smc.go  smc_round_settings.yaml  smc_test.go  synthetic.go
pkg/nfpd/: counts.go  csv.go  sites.go  types.go
pkg/population/: ricker.go  ricker_settings.yaml  ricker_test.go
pkg/simulate/: forward.go  forward_test.go  scenario.go
projects/: Fish_ecosystem_simulator_tests.ipynb  NFPD_data_exploration.ipynb  NFPD_freshwater_fish.ipynb  next_spatial_eco_project.ipynb
src/anglersim/: fishpop.go  generate_protobuf.sh  go.mod  main.go  params.go  sim.go  simio.proto
src/anglersim/fishpop/: fishpop.go
src/anglersim/simio/: simio.pb.go
src/app/: app.py  main.py  plotters.py
src/app/plotting/: NFPD_fish_data.py
src/data/: NFPD_fish_data.py  database.py  gov_data_utils.py  utils.py
src/models/: mean_counts.py
src/plotting/: NFPD_fish_data.py
src/simulator/: CMakeLists.txt  dynamicalpop.cpp  dynamicalpop.h  fishpop.cpp  fishpop.h  main.cpp
src/typing/: compound.py  simple.py
(+2 files in other folders)
